code samples -> reactangles

--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -66,13 +66,13 @@
 						<div class="inner">
 							<h1>About Me</h1>
 							<span class="image main"><img src="../assets/img/quad-meet.jpg" alt="" /></span>
+							<blockquote>You wouldn't plant a seed and then keep digging it up every couple of minutes to see if it's grown. So you shouldn't keep questioning yourself, your hard work, or your decisions. Have patience. Keep watering your seeds.<br><div style="position:relative;margin:auto;left:85%;"><i>~ A Wise Man</i></div></blockquote>
+							<br>
 							<h3 id="bs-header">My Backstory</h3>
-							<!-- <button id="story-link" onclick="toggleStory()" style="position:relative;float:right;bottom:64px;">Long</button> -->
 							<div id="brief-story">
 							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
 							<p>I attended Carnegie Mellon University where I was a member of the Varsity Football and Track & Field teams. I graduated in 2019 with a degree in Neuroscience. Feeling unsatisfied with life in academia, I chose to not pursue a Ph.D.</p>
-							<p>I fell in love with software development because it is intellectually stimulating, challenging, and creative. In my two years of experience, I have been chief engineer of three web applications, two of which were developed by a software company I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group, Inc</a>.</p>
-							<p></p>
+							<p>I fell in love with software development because it is intellectually stimulating, challenging, and creative. In my two years of experience, I have been chief engineer of three web applications, two of which were developed by the software company I co-founded, <a href="https://greenstargroup.org" target="_blank">Greenstar Group, Inc</a>.</p>
 							</div>
 
 				<!-- Long story -->
