added resume | projects coming soon

--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -66,7 +66,13 @@
 						<div class="inner">
 							<h1>About Me</h1>
 							<span class="image main"><img src="../assets/img/quad-meet.jpg" alt="" /></span>
-							<blockquote>You wouldn't plant a seed and then keep digging it up every couple of minutes to see if it's grown. So you shouldn't keep questioning yourself, your hard work, or your decisions. Have patience. Keep watering your seeds.<br><div style="position:relative;margin:auto;left:85%;"><i>~ A Wise Man</i></div></blockquote>
+							
+							<div style="width:100%">
+								<span class="fas fa-book" style="position:relative;left:41%;">&nbsp;
+								<a href="../oliver_resume.pdf" target="_blank">View Resumé</a></span>
+							</div><br>
+
+							<blockquote>You wouldn't plant a seed and then keep digging it up every couple of minutes to see if it's grown. So you shouldn't keep questioning yourself, your hard work, or your decisions. Have patience. Keep watering your seeds.<br><div style="position:relative;margin:auto;left:75%;"><i>~ A Wise Man</i></div></blockquote>
 							<br>
 							<h3 id="bs-header">My Backstory</h3>
 							<div id="brief-story">
@@ -120,11 +126,17 @@
 									</div>
 							</section>
 							<section aria-hidden="true">
+								<section>
+									<h2>View Resumé</h2>
+										<ul class="icons">
+											<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
+										</ul>
+								</section><br>
 								<h2>Follow</h2>
 									<ul class="icons">
 										<script src="banners/follow.js"></script>
 									</ul>
-							</section>
+							</section><br>
 							<ul class="copyright">
 								<script src="banners/credits.js"></script>
 							</ul>
