--- a/phantom/code.html
+++ b/phantom/code.html
@@ -492,11 +492,17 @@ def send_waiting_queries_raw():
 									</div>
 							</section>
 							<section aria-hidden="true">
+								<section>
+									<h2>View Resumé</h2>
+										<ul class="icons">
+											<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
+										</ul>
+								</section><br>
 								<h2>Follow</h2>
 									<ul class="icons">
 										<script src="banners/follow.js"></script>
 									</ul>
-							</section>
+							</section><br>
 							<ul class="copyright">
 								<script src="banners/credits.js"></script>
 							</ul>
