--- a/phantom/index.html
+++ b/phantom/index.html
@@ -66,7 +66,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hello there! My name is Oliver.</h1>
-								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me.</p>
+								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me. <i>(This page is under construction and will be updated periodically in the coming weeks)</i></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -80,17 +80,6 @@
 										</div>
 									</a>
 								</article>
-								<!-- <article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="projects.html">
-										<h2>Projects</h2>
-										<div class="content">
-											<p>Details about currently deployed projects and my project graveyard.</p>
-										</div>
-									</a>
-								</article> -->
 								<article class="style3">
 									<span class="image" style="border-radius: 5%;">
 										<img src="../assets/img/ghoozie-tn.jpg" alt="" style="filter:brightness(200%);" />
@@ -99,6 +88,17 @@
 										<h2>Code Samples</h2>
 										<div class="content">
 											<p>View a few tools I made and other code samples with descriptions.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/gs_square-tn.png" alt="" />
+									</span>
+									<a href="#">
+										<h2>Projects</h2>
+										<div class="content">
+											<p>Section coming soon!</p>
 										</div>
 									</a>
 								</article>
@@ -219,11 +219,18 @@
 								</div>
 						</section>
 						<section aria-hidden="true">
+							<section>
+								<h2>View Resumé</h2>
+									<ul class="icons">
+										<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
+									</ul>
+							</section><br>
 							<h2>Follow</h2>
 								<ul class="icons">
 									<script src="banners/follow.js"></script>
 								</ul>
-						</section>
+						</section><br>
+						
 						<ul class="copyright">
 							<script src="banners/credits.js"></script>
 						</ul>
