--- a/phantom/index.html
+++ b/phantom/index.html
@@ -98,43 +98,44 @@
 									<a href="#">
 										<h2>Projects</h2>
 										<div class="content">
-											<p>Section coming soon!</p>
-										</div>
-									</a>
-								</article>
-								<!-- <article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="education.html">
-										<h2>Education</h2>
-										<div class="content">
-											<p>Details about projects I built that never made it to deployment.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="crypto.html">
-										<h2>Crypto</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Section coming soon.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/cmu-seal-tn.png" alt="" />
 									</span>
-									<a href="skills.html">
-										<h2>Skills</h2>
+									<a href="#">
+										<h2>Education</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Learn more about my education. Section coming soon.</p>
 										</div>
 									</a>
 								</article>
+								<article class="style2">
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/react-native-tn.png" alt="" />
+									</span>
+									<a href="#">
+										<h2>Skills</h2>
+										<div class="content">
+											<p>Section coming soon. Some of my favorite languages, frameworks, and methodologies.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/bitcoin-tn.png" alt="" />
+									</span>
+									<a href="#">
+										<h2>Crypto</h2>
+										<div class="content">
+											<p>Section coming soon.</p>
+										</div>
+									</a>
+								</article>
+						<!-- 	
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
