aboutme updated a bit

--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -67,42 +67,30 @@
 							<h1>About Me</h1>
 							<span class="image main"><img src="../assets/img/quad-meet.jpg" alt="" /></span>
 							
-							<div style="width:100%">
+							<!-- <div style="width:100%">
 								<span class="fas fa-book" style="position:relative;left:41%;">&nbsp;
 								<a href="../oliver_resume.pdf" target="_blank">View Resumé</a></span>
-							</div><br>
+							</div><br> -->
 
 							<blockquote>You wouldn't plant a seed and then keep digging it up every couple of minutes to see if it's grown. So you shouldn't keep questioning yourself, your hard work, or your decisions. Have patience. Keep watering your seeds.<br><div style="position:relative;margin:auto;left:75%;"><i>~ A Wise Man</i></div></blockquote>
 							<br>
 							<h3 id="bs-header">My Backstory</h3>
-							<div id="brief-story">
+							<div>
 							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
 							<p>I attended Carnegie Mellon University where I was a member of the Varsity Football and Track & Field teams. I graduated in 2019 with a degree in Neuroscience. Feeling unsatisfied with life in academia, I chose to not pursue a Ph.D.</p>
 							<p>I fell in love with software development because it is intellectually stimulating, challenging, and creative. In my two years of experience, I have been chief engineer of three web applications, two of which were developed by the software company I co-founded, <a href="https://greenstargroup.org" target="_blank">Greenstar Group, Inc</a>.</p>
 							</div>
 
-				<!-- Long story -->
-
-							<!-- <div id="long-story" style="display:none;">
-							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
-							<p>I was recruited to play football for Carnegie Mellon University and enrolled in the Tepper School of Business in 2011. As I grew my love for athletics as a member of the Football and Track & Field teams, I became increasingly passionate about health and wellness. I chose to take a leave of absence from Carnegie Mellon in the spring of 2014 and set my sights on Massage Therapy school.</p>
-							<p>My time in massage school taught me much about life. I found answers to many questions I asked, and even more to questions I did not think to ask. The world of holistic health intrigued me a great deal, but I felt I needed a more intellectually stimulating life than what the practice offered to me. I chose to return to Carnegie Mellon in the spring of 2016 with a brand new vision.</p>
-							<p>I returned to CMU as a student of Neuroscience in the auspicious Mellon College of Science. My goal was to take what I had learned in massage school and apply my intellectual capabilities to bolstering the science behind some of the concepts I found most intriguing. Alas, there were more lessons to be learned.</p>
-							<p>Though I excelled in the Neuroscience core curriculum and was afforded great opportunities as a research assistant, the reality of life in academia became all too apparent. For enumerable reasons, by spring of my senior year I realized the path I had been on was not for me.</p>
-							<p>I was hungry for action; I wanted to create. I had just graduated a difficult program from a prestigious university, and had no direction. I began building houses in my hometown of State College with a buddy of mine I met through club rugby. I was working 60-70 hour weeks of hard labor making $12/hour with no benefits. I had never felt so free. I really enjoyed it.</p>
-							<p>While working construction, I still worked towards making an impact in the broader scope of health & wellness. I made the contact of a man named Shawn Sherman, who had developed SQUARE1&trade;, a neuromotor method to athletic training, physical therapy, and general wellness.</p>
-							<p>While taking Shawn's course, we struck up great conversation and realized we were of very like minds when it came to inadequacies of the current landscape and what was missing. I indeed felt like I had found a better route to achieving the goal I set out to accomplish by returning to college.</p>
-							<p>I currently have a soft contract to write the official SQUARE1&trade; textbook. But there was something else I learned that I find more important to me personally. Along this journey I realized that I didn't actually want a career in health and wellness. I had explored every avenue, and earned every opportunity I could have hoped for, and it's simply not what I want to do. My intellectual hunger continued to grow alongside my desire to build and create. It pulled me into a more challenging and creative field.</p>
-							<p>In June of 2020, during the coronavirus lockdown, I purchased a $15 Python Masterclass on Udemy, taught by Tim Buchalka. I had taken some programming courses through the Carnegie Mellon School of Computer Science and I loved every one of them. From Intro to Programming where I learned how the internet packages and sends information, all the way to Parallel and Distributed Processing where I built my own neural network.</p>
-							<p>Shortly after I began the program, I got in touch with an old friend Jacob, whom I met on the Track & Field team the second time I went to college. He had a startup in the EdTech space called Uncommon Core and I was able to get some real experience working with him.</p>
-							<p>For the next 6 months, we would spend every day on Zoom coding together. He was an excellent tutor, having served as a graduate level TA for multiple computer science courses in college. By the third month in I was being left alone to complete solo features and pipelines across Python, PHP, and JavaScript languages.</p>
-							<p>An opportunity presented itself to us when a friend of Jacob's FinTech supplier was purchased and was turning off his portfolio optimizing service.</p>
-							</div> -->
-
-				<!-- Long story -->
-
+							<br>
 							<h3>Education</h3>
-							<p>Coming Soon</p>
+							<strong style="margin-bottom:30px;">Carnegie Mellon</strong><br><br>
+							<p><span class="image left"><img src="../assets/img/cmu-square-tn.png"></span>I went to Carnegie Mellon University, studying business for a few years as well as earning a degree in Cognitive Neuroscience. I also took a number of statistics, mathematics, and computer programming courses in which I excelled and thoroughly enjoyed. One thing I learned from CMU outside the classroom is what it means to have grit; how to overcome adversity. As you'll read below my journey was never a straightforward one. Earning my degree taught me a lot about my ability to perform at a high level regardless of circumstance.</p>
+							<p>I have learned more about software development outside the classrooms in Pittsburgh, but college proved to me that I have the ability to think critically and to understand and manipulate complex systems for a productive outcome. I earned a 3.87 GPA in my Neuroscience core curriculum which included graduate-level courses such as Parallel and Distributed Processing, where I programmed my own neural network, and Systems Neuroscience, which viewed the brain as a computational unit with various classes of neurons acting as the logic gates inside of a CPU.</p>
+							<!-- <hr style="position:relative;width:70%;left:15%;"> -->
+							<strong style="padding-bottom:30px;">Integrative Bodywork School of Massage</strong><br><br>
+							<p><span class="image right"><img src="../assets/img/ibsmt-tn.png"></span>In the heart of my college tenure, I had to take a leave of absence due to financial reasons. I capitalized on this opportunity by expanding into an area that my family has long had history in and had taken a personal interest in myself. I enrolled in Massage Therapy school to learn more about the natural world, health, and the human body.</p><p>During this experience I was fortunate enough to practice sports massage therapy on prominent athletes, most notably Saquon Barkley and Chris Godwin of the NFL&reg;, among many others. While stories like those are fun to tell over drinks with friends, what I really got out of it was an appreciation for the richness and the majesty of the world in which we all live.</p><p>I earned an accredited degree in massage therapy and practiced briefly while working as a Domino's delivery boy, a crew member at Jersey Mike's, a bouncer downtown at a Penn State college bar, and an assistant coach for my old middle school Track & Field team. It wasn't long before I turned 24 and was able to apply for financial aid without my parents' income being taken into account, and I returned to Carnegie Mellon to finish what I started.</p>
+
+							<br>
 							<h3>Skills</h3>
 							<p>Coming Soon</p>
 							<h3>Work Experience</h3>
@@ -151,29 +139,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-		<!-- Toggle Story -->
-			<script>
-				function toggleStory() {
-					var bstory = document.getElementById('brief-story');
-					var lstory = document.getElementById('long-story');
-					var storyLink = document.getElementById('story-link');
-					var bsHeader = document.getElementById('bs-header');
-
-					if (lstory.style.display == "none") {
-						lstory.style.display = "block";
-						bstory.style.display = "none";
-						storyLink.innerHTML = "Brief";
-						bsHeader.innerHTML = "My Backstory (Long)";
-
-					} else {
-						lstory.style.display = "none";
-						bstory.style.display = "block";
-						storyLink.innerHTML = "Long";
-						bsHeader.innerHTML = "My Backstory (Brief)";
-					}
-				}
-			</script>
 
 	</body>
 </html>
