--- a/phantom/index.html
+++ b/phantom/index.html
@@ -66,7 +66,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hello there! My name is Oliver.</h1>
-								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me. <i>(This page is under construction and will be updated periodically in the coming weeks)</i></p>
+								<p>I am a software engineer and web application developer. I studied at Carnegie Mellon University, class of 2019. Most recently, I developed FinTech and CRM web applications with the startup I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group</a>. Click below to learn more about me!</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -91,7 +91,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style3">
 									<span class="image" style="border-radius: 5%;">
 										<img src="../assets/img/gs_square-tn.png" alt="" />
 									</span>
@@ -99,17 +99,6 @@
 										<h2>Projects</h2>
 										<div class="content">
 											<p>Section coming soon.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image" style="border-radius: 5%;">
-										<img src="../assets/img/cmu-seal-tn.png" alt="" />
-									</span>
-									<a href="#">
-										<h2>Education</h2>
-										<div class="content">
-											<p>Learn more about my education. Section coming soon.</p>
 										</div>
 									</a>
 								</article>
@@ -126,6 +115,18 @@
 								</article>
 								<article class="style1">
 									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/cmu-seal-tn.png" alt="" />
+									</span>
+									<a href="#">
+										<h2>Education</h2>
+										<div class="content">
+											<p>Learn more about my education. Section coming soon.</p>
+										</div>
+									</a>
+								</article>
+								
+								<!-- <article class="style1">
+									<span class="image" style="border-radius: 5%;">
 										<img src="../assets/img/bitcoin-tn.png" alt="" />
 									</span>
 									<a href="#">
@@ -134,7 +135,7 @@
 											<p>Section coming soon.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 						<!-- 	
 								<article class="style2">
 									<span class="image">
