--- a/phantom/index.html
+++ b/phantom/index.html
@@ -66,7 +66,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hello there! My name is Oliver.</h1>
-								<p>I am a software engineer and web application developer. I studied at Carnegie Mellon University, class of 2019. Most recently, I developed FinTech and CRM web applications with the startup I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group</a>. Click below to learn more about me!</p>
+								<p>I am a software engineer and web application developer. I studied at Carnegie Mellon University, class of 2019. Most recently I developed FinTech and CRM web applications with the startup I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group</a>. Click below to learn more about me!</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
