--- a/phantom/index.html
+++ b/phantom/index.html
@@ -109,7 +109,7 @@
 									<a href="#">
 										<h2>Skills</h2>
 										<div class="content">
-											<p>Section coming soon. Some of my favorite languages, frameworks, and methodologies.</p>
+											<p>Section coming soon.</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 									<a href="#">
 										<h2>Education</h2>
 										<div class="content">
-											<p>Learn more about my education. Section coming soon.</p>
+											<p>Section coming soon.</p>
 										</div>
 									</a>
 								</article>
