--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -82,7 +82,7 @@
 							</div>
 
 							<br>
-							<h3>Education</h3>
+							<h3 id="education">Education</h3>
 							<strong style="margin-bottom:30px;">Carnegie Mellon</strong><br><br>
 							<p><span class="image left"><img src="../assets/img/cmu-square-tn.png"></span>I went to Carnegie Mellon University, studying business for a few years as well as earning a degree in Cognitive Neuroscience. I also took a number of statistics, mathematics, and computer programming courses in which I excelled and thoroughly enjoyed. One thing I learned from CMU outside the classroom is what it means to have grit; how to overcome adversity. As you'll read below my journey was never a straightforward one. Earning my degree taught me a lot about my ability to perform at a high level regardless of circumstance.</p>
 							<p>I have learned more about software development outside the classrooms in Pittsburgh, but college proved to me that I have the ability to think critically and to understand and manipulate complex systems for a productive outcome. I earned a 3.87 GPA in my Neuroscience core curriculum which included graduate-level courses such as Parallel and Distributed Processing, where I programmed my own neural network, and Systems Neuroscience, which viewed the brain as a computational unit with various classes of neurons acting as the logic gates inside of a CPU.</p>
@@ -91,8 +91,22 @@
 							<p><span class="image right"><img src="../assets/img/ibsmt-tn.png"></span>In the heart of my college tenure, I had to take a leave of absence due to financial reasons. I capitalized on this opportunity by expanding into an area that my family has long had history in and had taken a personal interest in myself. I enrolled in Massage Therapy school to learn more about the natural world, health, and the human body.</p><p>During this experience I was fortunate enough to practice sports massage therapy on prominent athletes, most notably Saquon Barkley and Chris Godwin of the NFL&reg;, among many others. While stories like those are fun to tell over drinks with friends, what I really got out of it was an appreciation for the richness and the majesty of the world in which we all live.</p><p>I earned an accredited degree in massage therapy and practiced briefly while working as a Domino's delivery boy, a crew member at Jersey Mike's, a bouncer downtown at a Penn State college bar, and an assistant coach for my old middle school Track & Field team.</p>
 
 							<br>
-							<h3>Skills</h3>
-							<p>Coming Soon</p>
+							<h3 id="skills">Skills</h3>
+							<p>Languages, Libraries, Frameworks, and Methodologies I enjoy the most and am the most proficient in. This is by no means an exhaustive list but does give you a pretty good idea of my skillset.</p>
+							<table>
+								<thead>
+									<th style="width:50px;"></th>
+									<th style="width:180px;">Name</th>
+									<th>Uses</th>
+									<th>Likes</th>
+									<th>Dislikes</th>
+								</thead>
+								<tbody>
+									<script src="skillsTable.js"></script>
+								</tbody>
+							</table>
+
+							<br>
 							<h3>Work Experience</h3>
 							<p>Coming Soon</p>
 							<h3>Hobbies & Interests</h3>
