--- a/phantom/code.html
+++ b/phantom/code.html
@@ -141,7 +141,7 @@ whatever you want to see</code></pre></td>
 		<br>
 
 		<!-- SQL library -->
-				<table class="alt" style="margin-bottom:8px;">
+				<table class="alt" style="margin-bottom:8px;" id="sql-library">
 					<thead>
 						<tr style="line-height: 120%;">
 						<th colspan="1" style="vertical-align: middle;width:10%;text-align:center;""><h3><a href="https://github.com/ghoozie/ghoozie/blob/master/db_php.docx" target="_blank" style="border-bottom: none;"><i class="icon brands fas fa-github" aria-hidden="true" style="width:100%;text-align:center;bottom:5px;"></i><code>SQL</code></a></h3></th>
