--- a/phantom/index.html
+++ b/phantom/index.html
@@ -60,7 +60,6 @@
 				</nav>
 				
 
-
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
@@ -106,10 +105,10 @@
 									<span class="image" style="border-radius: 5%;">
 										<img src="../assets/img/react-native-tn.png" alt="" />
 									</span>
-									<a href="#">
+									<a href="aboutme.html#skills">
 										<h2>Skills</h2>
 										<div class="content">
-											<p>Section coming soon.</p>
+											<p>Highlighted languages, libraries, and frameworks.</p>
 										</div>
 									</a>
 								</article>
@@ -117,10 +116,10 @@
 									<span class="image" style="border-radius: 5%;">
 										<img src="../assets/img/cmu-seal-tn.png" alt="" />
 									</span>
-									<a href="#">
+									<a href="aboutme.html#education">
 										<h2>Education</h2>
 										<div class="content">
-											<p>Section coming soon.</p>
+											<p>A brief section about my degrees from Carnegie Mellon and massage school.</p>
 										</div>
 									</a>
 								</article>
