added some tiles

--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -108,9 +108,12 @@
 
 							<br>
 							<h3>Work Experience</h3>
-							<p>Coming Soon</p>
+							<p>&emsp;<a href="../oliver_resume.pdf" class="icon brands fas fa-audible">&emsp;View Resumé</a></p>
+							<p>&emsp;<a href="#" class="fas fa-pen-nib" style="border-bottom:none;">&emsp;View Projects Page</a>&ensp;(Coming soon)</p>
+
+							<br>
 							<h3>Hobbies & Interests</h3>
-							<p>Coming Soon</p>
+							<p>&emsp;<a href="#" class="fas fa-thumbs-up" style="border-bottom:none;">&emsp;View Hobbies Page!</a>&ensp;(Coming soon)</p>
 						</div>
 					</div>
 
@@ -127,18 +130,14 @@
 										</div>
 									</div>
 							</section>
+
+
+
 							<section aria-hidden="true">
-								<section>
-									<h2>View Resumé</h2>
-										<ul class="icons">
-											<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
-										</ul>
-								</section><br>
-								<h2>Follow</h2>
-									<ul class="icons">
-										<script src="banners/follow.js"></script>
-									</ul>
-							</section><br>
+								<script src="banners/rightFooter.js"></script>
+							</section>
+								
+
 							<ul class="copyright">
 								<script src="banners/credits.js"></script>
 							</ul>
