--- a/phantom/crypto.html
+++ b/phantom/crypto.html
@@ -84,18 +84,14 @@
 									</div>
 								</div>
 						</section>
+
+
+
 						<section aria-hidden="true">
-							<section>
-								<h2>View Resumé</h2>
-									<ul class="icons">
-										<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
-									</ul>
-							</section><br>
-							<h2>Follow</h2>
-								<ul class="icons">
-									<script src="banners/follow.js"></script>
-								</ul>
-						</section><br>
+							<script src="banners/rightFooter.js"></script>
+						</section>
+							
+
 						<ul class="copyright">
 							<script src="banners/credits.js"></script>
 						</ul>
