--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -72,35 +72,31 @@
 					</div>
 
 				<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<section>
-							<h2>Get in touch</h2>
-								<div class="row">
-									<div class="col-6 col-12-medium">
-										<ul class="alt">
-											<script src="banners/inTouch.js"></script>
-										</ul>
-									</div>
-								</div>
-						</section>
-						<section aria-hidden="true">
+					<footer id="footer">
+						<div class="inner">
 							<section>
-								<h2>View Resumé</h2>
-									<ul class="icons">
-										<li><a href="../oliver_resume.pdf" target="_blank" class="icon brands style2 fa-audible"><span class="label">Resumé</span></a></li>
-									</ul>
-							</section><br>
-							<h2>Follow</h2>
-								<ul class="icons">
-									<script src="banners/follow.js"></script>
-								</ul>
-						</section><br>
-						<ul class="copyright">
-							<script src="banners/credits.js"></script>
-						</ul>
-					</div>
-				</footer>
+								<h2>Get in touch</h2>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<ul class="alt">
+												<script src="banners/inTouch.js"></script>
+											</ul>
+										</div>
+									</div>
+							</section>
+
+
+
+							<section aria-hidden="true">
+								<script src="banners/rightFooter.js"></script>
+							</section>
+								
+
+							<ul class="copyright">
+								<script src="banners/credits.js"></script>
+							</ul>
+						</div>
+					</footer>
 
 			</div>
 
