--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -92,7 +92,7 @@
 
 							<br>
 							<h3 id="skills">Skills</h3>
-							<p>Languages, Libraries, Frameworks, and Methodologies I enjoy the most and am the most proficient in. This is by no means an exhaustive list but does give you a pretty good idea of my skillset.</p>
+							<p>Below are some of the languages, libraries, and frameworks I use most frequently. This is by no means an exhaustive list, but it does give a general idea of my current skillset.</p>
 							<table>
 								<thead>
 									<th style="width:50px;"></th>
